--- a/Exercise/Exercise.csproj
+++ b/Exercise/Exercise.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Spectre.Console" Version="0.48.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\" />
+    </ItemGroup>
+
 </Project>
